--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+links:
+  facebook: https://www.facebook.com/Lillymaysdesserts/
+  instagram: https://www.instagram.com/lillymaysdesserts/
+  etsy: https://www.etsy.com/shop/Lillymaysdesserts
 
 # Exclude from processing.
 # The following items will not be processed, by default.
