Add Gooogle link

--- a/src/config.json
+++ b/src/config.json
@@ -7,6 +7,6 @@
   "links": {
     "facebook": "https://www.facebook.com/Lillymaysdesserts/",
     "instagram": "https://www.instagram.com/lillymaysdesserts/",
-    "etsy": "https://www.etsy.com/shop/Lillymaysdesserts"
+    "google": "https://maps.app.goo.gl/weboeQAyHc3Mr97c7"
   }
 }
